name:           hledger-chart
version: 0.13
category:       Finance
synopsis:       A hledger add-on command to generate pie charts.
description:    This generates simple pie chart images showing relative account balances.
license:        GPL
license-file:   LICENSE
author:         Simon Michael <simon@joyful.com>
maintainer:     Simon Michael <simon@joyful.com>
homepage:       http://hledger.org
bug-reports:    http://code.google.com/p/hledger/issues
stability:      experimental
tested-with:    GHC==6.10, GHC==6.12
cabal-version:  >= 1.6
build-type:     Simple
data-dir:       data
data-files:
extra-tmp-files:
extra-source-files:

source-repository head
  type:     darcs
  location: http://joyful.com/repos/hledger

executable hledger-chart
  main-is:        hledger-chart.hs
  ghc-options:    -threaded -W
  other-modules:
                  Hledger.Chart.Main
  build-depends:
                  hledger == 0.13
                 ,hledger-lib == 0.13
                 -- ,HUnit
                 ,base >= 3 && < 5
                 -- ,containers
                 -- ,csv
                 -- ,directory
                 -- ,filepath
                 -- ,mtl
                 -- ,old-locale
                 -- ,old-time
                 -- ,parsec
                 -- ,process
                 -- ,regexpr >= 0.5.1
                 ,safe >= 0.2
                 -- ,split == 0.1.*
                 -- ,time
                 -- ,utf8-string >= 0.3.5 && < 0.4
                 ,Chart >= 0.11 && < 0.15
                 ,colour
