name:           hledger-chart
version: 0.15.2
category:       Finance
synopsis:       A pie chart image generator for the hledger accounting tool.
description:
                hledger is a library and set of user tools for working
                with financial data (or anything that can be tracked in a
                double-entry accounting ledger.) It is a haskell port and
                friendly fork of John Wiegley's Ledger. hledger provides
                command-line, curses and web interfaces, and aims to be a
                reliable, practical tool for daily use.

license:        GPL
license-file:   LICENSE
author:         Simon Michael <simon@joyful.com>
maintainer:     Simon Michael <simon@joyful.com>
homepage:       http://hledger.org
bug-reports:    http://code.google.com/p/hledger/issues
stability:      experimental
tested-with:    GHC==6.10, GHC==6.12
cabal-version:  >= 1.6
build-type:     Simple
-- data-dir:       data
-- data-files:
extra-tmp-files:
extra-source-files:

source-repository head
  type:     darcs
  location: http://joyful.com/repos/hledger

executable hledger-chart
  main-is:        hledger-chart.hs
  ghc-options:    -threaded -W
  other-modules:
                  Hledger.Chart
                  Hledger.Chart.Main
                  Hledger.Chart.Options
  build-depends:
                  hledger == 0.15.2
                 ,hledger-lib == 0.15.2
                 ,HUnit
                 ,base >= 3 && < 5
                 ,cmdargs >= 0.8   && < 0.9
                 ,containers
                 -- ,csv
                 -- ,directory
                 -- ,filepath
                 -- ,mtl
                 -- ,old-locale
                 -- ,old-time
                 -- ,parsec
                 -- ,process
                 -- ,regexpr >= 0.5.1
                 ,safe >= 0.2
                 -- ,split == 0.1.*
                 ,time
                 -- ,utf8-string >= 0.3.5 && < 0.4
                 ,Chart >= 0.11 && < 0.15
                 ,colour
