name:           hledger-lib
version: 0.17
category:       Finance
synopsis:       Core data types, parsers and utilities for the hledger accounting tool.
description:
                hledger is a library and set of user tools for working
                with financial data (or anything that can be tracked in a
                double-entry accounting ledger.) It is a haskell port and
                friendly fork of John Wiegley's Ledger. hledger provides
                command-line, curses and web interfaces, and aims to be a
                reliable, practical tool for daily use.

license:        GPL
license-file:   LICENSE
author:         Simon Michael <simon@joyful.com>
maintainer:     Simon Michael <simon@joyful.com>
homepage:       http://hledger.org
bug-reports:    http://code.google.com/p/hledger/issues
stability:      beta
tested-with:    GHC==7.0, GHC==7.2
cabal-version:  >= 1.6
build-type:     Simple
-- data-dir:       data
-- data-files:
-- extra-tmp-files:
-- extra-source-files:
--   README
--   sample.ledger
--   sample.timelog

library
  -- should set patchlevel here as in Makefile
  cpp-options:    -DPATCHLEVEL=0
  exposed-modules:
                  Hledger
                  Hledger.Data
                  Hledger.Data.Account
                  Hledger.Data.AccountName
                  Hledger.Data.Amount
                  Hledger.Data.Commodity
                  Hledger.Data.Dates
                  Hledger.Data.Transaction
                  Hledger.Data.Journal
                  Hledger.Data.Ledger
                  Hledger.Data.Matching
                  Hledger.Data.Posting
                  Hledger.Data.TimeLog
                  Hledger.Data.Types
                  Hledger.Read
                  Hledger.Read.JournalReader
                  Hledger.Read.TimelogReader
                  Hledger.Read.Utils
                  Hledger.Reports
                  Hledger.Utils
                  Hledger.Utils.UTF8
  Build-Depends:
                  base >= 3 && < 5
                 ,bytestring
                 ,cmdargs >= 0.9.1   && < 0.10
                 ,containers
                 ,directory
                 ,filepath
                 ,mtl
                 ,old-locale
                 ,old-time
                 ,parsec
                 ,regexpr >= 0.5.1
                 ,safe >= 0.2
                 ,split == 0.1.*
                 ,time
                 ,utf8-string >= 0.3.5 && < 0.4
                 ,HUnit

source-repository head
  type:     darcs
  location: http://joyful.com/repos/hledger

-- cf http://www.haskell.org/cabal/release/cabal-latest/doc/users-guide/authors.html

-- Additional dependencies:
-- required for make test: test-framework, test-framework-hunit
-- required for make bench: tabular-0.1
