name:           hledger-lib
version: 0.22.98
stability:      beta
category:       Finance
synopsis:       Core data types, parsers and utilities for the hledger accounting tool.
description:
                hledger is a library and set of user tools for working
                with financial data (or anything that can be tracked in a
                double-entry accounting ledger.) It is a haskell port and
                friendly fork of John Wiegley's Ledger. hledger provides
                command-line, curses and web interfaces, and aims to be a
                reliable, practical tool for daily use.

license:        GPL
license-file:   LICENSE
author:         Simon Michael <simon@joyful.com>
maintainer:     Simon Michael <simon@joyful.com>
homepage:       http://hledger.org
bug-reports:    http://hledger.org/bugs
tested-with:    GHC==7.2.2, GHC==7.4.2, GHC==7.6.3, GHC==7.8
cabal-version:  >= 1.10
build-type:     Simple
-- data-dir:       data
-- data-files:
-- extra-tmp-files:
extra-source-files: tests/suite.hs
--   README
--   sample.ledger
--   sample.timelog

library
  -- should set patchlevel here as in Makefile
  cpp-options:    -DPATCHLEVEL=0
  default-language: Haskell2010
  exposed-modules:
                  Hledger
                  Hledger.Data
                  Hledger.Data.Account
                  Hledger.Data.AccountName
                  Hledger.Data.Amount
                  Hledger.Data.Commodity
                  Hledger.Data.Dates
                  Hledger.Data.OutputFormat
                  Hledger.Data.Journal
                  Hledger.Data.Ledger
                  Hledger.Data.Posting
                  Hledger.Data.RawOptions
                  Hledger.Data.TimeLog
                  Hledger.Data.Transaction
                  Hledger.Data.Types
                  Hledger.Query
                  Hledger.Read
                  Hledger.Read.CsvReader
                  Hledger.Read.JournalReader
                  Hledger.Read.TimelogReader
                  Hledger.Reports
                  Hledger.Reports.ReportOptions
                  Hledger.Reports.BalanceHistoryReport
                  Hledger.Reports.BalanceReport
                  Hledger.Reports.EntriesReport
                  Hledger.Reports.MultiBalanceReports
                  Hledger.Reports.PostingsReport
                  Hledger.Reports.TransactionsReports
                  Hledger.Utils
                  Hledger.Utils.UTF8IOCompat
  build-depends:
                  base >= 4.3 && < 5
                 ,bytestring
                 ,cmdargs >= 0.10 && < 0.11
                 ,containers
                 ,csv
                 -- ,data-pprint >= 0.2.3 && < 0.3
                 ,directory
                 ,filepath
                 ,mtl
                 ,old-locale
                 ,old-time
                 ,parsec
                 ,regex-tdfa
                 ,regexpr >= 0.5.1
                 ,safe >= 0.2
                 ,split >= 0.1 && < 0.3
                 ,time
                 ,transformers >= 0.2 && < 0.4
                 ,utf8-string >= 0.3.5 && < 0.4
                 ,HUnit
  if impl(ghc >= 7.4)
    build-depends: pretty-show >= 1.6.4

source-repository head
  type:     git
  location: https://github.com/simonmichael/hledger

test-suite tests
  type:     exitcode-stdio-1.0
  main-is:  tests/suite.hs
  ghc-options: -Wall
  default-language: Haskell2010
  build-depends: hledger-lib
               , base >= 4.3 && < 5
               , cmdargs
               , containers
               , csv
               -- , data-pprint >= 0.2.3 && < 0.3
               , directory
               , filepath
               , HUnit
               , mtl
               , old-locale
               , old-time
               , parsec
               , regex-tdfa
               , regexpr
               , safe
               , split
               , test-framework
               , test-framework-hunit
               , time
               , transformers
  if impl(ghc >= 7.4)
    build-depends: pretty-show >= 1.6.4

-- cf http://www.haskell.org/cabal/release/cabal-latest/doc/users-guide/authors.html

-- Additional dependencies:
-- required for make test: test-framework, test-framework-hunit
-- required for make bench: tabular-0.1
