name:           hledger-lib
version: 0.23.98
stability:      stable
category:       Finance, Console
synopsis:       Core data types, parsers and utilities for the hledger accounting tool.
description:
                hledger is a library and set of user tools for working
                with financial data (or anything that can be tracked in a
                double-entry accounting ledger.) It is a haskell port and
                friendly fork of John Wiegley's Ledger. hledger provides
                command-line, curses and web interfaces, and aims to be a
                reliable, practical tool for daily use.

license:        GPL
license-file:   LICENSE
author:         Simon Michael <simon@joyful.com>
maintainer:     Simon Michael <simon@joyful.com>
homepage:       http://hledger.org
bug-reports:    http://hledger.org/bugs
tested-with:    GHC==7.2.2, GHC==7.4.2, GHC==7.6.3, GHC==7.8.2
cabal-version:  >= 1.10
build-type:     Simple
-- data-dir:       data
-- data-files:
-- extra-tmp-files:
extra-source-files: 
                    tests/suite.hs
                    CHANGES
--   README
--   sample.ledger
--   sample.timelog

source-repository head
  type:     git
  location: https://github.com/simonmichael/hledger

flag double
    Description:   Use old Double number representation (instead of Decimal), for testing/benchmarking.
    Default:       False


library
  -- should set patchlevel here as in Makefile
  cpp-options: -DPATCHLEVEL=0
  ghc-options: -Wall -fno-warn-unused-do-bind -fno-warn-name-shadowing -fno-warn-missing-signatures
  ghc-options: -fno-warn-type-defaults -fno-warn-orphans
  if flag(double)
    cpp-options: -DDOUBLE
  default-language: Haskell2010
  exposed-modules:
                  Hledger
                  Hledger.Data
                  Hledger.Data.Account
                  Hledger.Data.AccountName
                  Hledger.Data.Amount
                  Hledger.Data.Commodity
                  Hledger.Data.Dates
                  Hledger.Data.OutputFormat
                  Hledger.Data.Journal
                  Hledger.Data.Ledger
                  Hledger.Data.Posting
                  Hledger.Data.RawOptions
                  Hledger.Data.TimeLog
                  Hledger.Data.Transaction
                  Hledger.Data.Types
                  Hledger.Query
                  Hledger.Read
                  Hledger.Read.CsvReader
                  Hledger.Read.JournalReader
                  Hledger.Read.TimelogReader
                  Hledger.Reports
                  Hledger.Reports.ReportOptions
                  Hledger.Reports.BalanceHistoryReport
                  Hledger.Reports.BalanceReport
                  Hledger.Reports.EntriesReport
                  Hledger.Reports.MultiBalanceReports
                  Hledger.Reports.PostingsReport
                  Hledger.Reports.TransactionsReports
                  Hledger.Utils
                  Hledger.Utils.Debug
                  Hledger.Utils.Regex
                  Hledger.Utils.UTF8IOCompat
  build-depends:
                  base >= 4.3 && < 5
                 ,blaze-markup >= 0.5.1
                 ,bytestring
                 ,cmdargs >= 0.10 && < 0.11
                 ,containers
                 ,csv
                 -- ,data-pprint >= 0.2.3 && < 0.3
                 ,Decimal
                 ,directory
                 ,filepath
                 ,mtl
                 ,old-locale
                 ,old-time
                 ,parsec
                 ,regex-tdfa
                 ,regexpr >= 0.5.1
                 ,safe >= 0.2
                 ,split >= 0.1 && < 0.3
                 ,time
                 ,transformers >= 0.2 && < 0.5
                 ,utf8-string >= 0.3.5 && < 0.4
                 ,HUnit
  if impl(ghc >= 7.4)
    build-depends: pretty-show >= 1.6.4


test-suite tests
  type:     exitcode-stdio-1.0
  main-is:  suite.hs
  hs-source-dirs: tests
  ghc-options: -Wall -fno-warn-unused-do-bind -fno-warn-name-shadowing -fno-warn-missing-signatures
  ghc-options: -fno-warn-type-defaults -fno-warn-orphans
  default-language: Haskell2010
  build-depends: hledger-lib
               , base >= 4.3 && < 5
               , blaze-markup >= 0.5.1
               , cmdargs
               , containers
               , csv
               -- , data-pprint >= 0.2.3 && < 0.3
               , Decimal
               , directory
               , filepath
               , HUnit
               , mtl
               , old-locale
               , old-time
               , parsec
               , regex-tdfa
               , regexpr
               , safe
               , split
               , test-framework
               , test-framework-hunit
               , time
               , transformers
  if impl(ghc >= 7.4)
    build-depends: pretty-show >= 1.6.4

-- cf http://www.haskell.org/cabal/release/cabal-latest/doc/users-guide/authors.html

-- Additional dependencies:
-- required for make test: test-framework, test-framework-hunit
-- required for make bench: tabular-0.1
