name:           hledger-vty
version: 0.13
category:       Finance
synopsis:       A hledger add-on command providing a curses-style console interface.
description:    
    A hledger add-on command providing a full-window console interface.
license:        GPL
license-file:   LICENSE
author:         Simon Michael <simon@joyful.com>
maintainer:     Simon Michael <simon@joyful.com>
homepage:       http://hledger.org
bug-reports:    http://code.google.com/p/hledger/issues
stability:      experimental
tested-with:    GHC==6.10, GHC==6.12
cabal-version:  >= 1.6
build-type:     Simple
data-dir:       data
data-files:
extra-tmp-files:
extra-source-files:

source-repository head
  type:     darcs
  location: http://joyful.com/repos/hledger

executable hledger-vty
  main-is:        Main.hs
  ghc-options:    -threaded -W
  other-modules:
                  Hledger.Vty
  build-depends:
                  hledger == 0.13
                 ,hledger-lib == 0.13
                 -- ,HUnit
                 ,base >= 3 && < 5
                 -- ,containers
                 -- ,csv
                 -- ,directory
                 -- ,filepath
                 -- ,mtl
                 -- ,old-locale
                 -- ,old-time
                 -- ,parsec
                 -- ,process
                 -- ,regexpr >= 0.5.1
                 ,safe >= 0.2
                 -- ,split == 0.1.*
                 -- ,time
                 -- ,utf8-string >= 0.3.5 && < 0.4
                 ,vty >= 4.6.0.1 && < 4.7
